--- a/docs/all-widgets/package.json
+++ b/docs/all-widgets/package.json
@@ -1,6 +1,7 @@
 {
   "name": "webapp",
   "version": "0.1.0",
+  "homepage": "https://iotum.github.io/iotum-samples/all-widgets",
   "private": true,
   "dependencies": {
     "@iotum/callbridge-js": "github:iotum/callbridge-js#v1.0.4",
@@ -14,6 +15,8 @@
   },
   "scripts": {
     "start": "set HOST=localhost.callbridge.com&&set HTTPS=true&&react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -35,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
