--- a/docs/all-widgets/package.json
+++ b/docs/all-widgets/package.json
@@ -17,7 +17,8 @@
     "start": "set HOST=localhost.callbridge.com&&set HTTPS=true&&react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "build": "react-scripts build",
+    // "build": "react-scripts build",
+    "build": "react-scripts build && rm -rf docs && mv build docs",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
