--- a/docs/popout-chat-app/package.json
+++ b/docs/popout-chat-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "popout-chat-app",
   "version": "0.1.0",
-  "homepage": "https://iotum.github.io/iotum-samples",
+  "homepage": "https://iotum.github.io/iotum-samples/pop",
   "private": true,
   "dependencies": {
     "@iotum/callbridge-js": "^1.0.4",
