changed homepage for all-widgets

--- a/docs/all-widgets/package.json
+++ b/docs/all-widgets/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webapp",
   "version": "0.1.0",
-  "homepage": "https://iotum.github.io/iotum-samples/all-widgets/",
+  "homepage": "https://iotum.github.io/iotum-samples/",
   "private": true,
   "dependencies": {
     "@iotum/callbridge-js": "github:iotum/callbridge-js#v1.0.4",
