Create github workflows script to automate the build process

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "iotum-samples",
   "version": "0.1.0",
+  "homepage": "https://iotum.github.io/iotum-samples/",
   "private": true,
   "dependencies": {
     "@iotum/callbridge-js": "github:iotum/callbridge-js#v1.0.5",
