--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "iotum-samples",
   "version": "0.1.0",
-  "homepage": "https://iotum.github.io/iotum-samples/",
   "private": true,
   "dependencies": {
     "@iotum/callbridge-js": "github:iotum/callbridge-js#v1.0.5",
@@ -43,6 +42,7 @@
   },
   "devDependencies": {
     "react-router-dom": "^6.17.0",
-    "gh-pages": "^5.0.0"
+    "gh-pages": "^5.0.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
